--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="~/Content/ProgressBar/css/bootstrap-progressbar-3.3.4.css">
     <!--Custom Css-->
     <link rel="stylesheet" href="~/Content/CustomCss/main.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/QA.css">
     <link rel="stylesheet" href="~/Content/CustomCss/sponsor.css">
     <link rel="stylesheet" href="~/Content/CustomCss/speaker.css">
     <link rel="stylesheet" href="~/Content/CustomCss/home.css">
@@ -52,7 +53,7 @@
                 <ul id="side-main-menu" class="side-menu list-unstyled">
                     <li class="active"><a href="@Url.Action("Index", "Home")"> <i class="icon-home"></i><span>Home</span></a></li>
                     <li> <a href="@Url.Action("Index", "Timeline")"><i class="icon-form"></i><span>Timeline</span></a></li>
-                    <li> <a href="@Url.Action("Index", "Question")"><i class="fa fa-question-circle"></i><span>Q&A</span></a></li>
+                    <li> <a href="@Url.Action("Index", "QA")"><i class="fa fa-question-circle"></i><span>Q&A</span></a></li>
                     <li> <a href="@Url.Action("Index", "Voting")"> <i class="fa fa-check-circle-o"> </i><span>Voting</span></a></li>
                     <li> <a href="@Url.Action("Index", "Livestream")"> <i class="fa fa-video-camera"></i><span>Livestream</span></a></li>
                     <li> <a href="@Url.Action("Index", "Speaker")"> <i class="fa fa-users"></i><span>Speaker</span></a></li>
