Update Hide Show Voting

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="~/Content/CustomCss/speaker.css">
     <link rel="stylesheet" href="~/Content/CustomCss/home.css">
     <link rel="stylesheet" href="~/Content/CustomCss/timeline.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/voting.css">
+
 
 
 
