+ Xong phần QA + Phần like còn chậm nếu chạy trên server + Thêm phần data table cho client

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
     <!-- bootstrap wysihtml5 - text editor -->
     <link rel="stylesheet" href="~/Content/AdminLTE-master/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
+    <!--Data Table-->
+    <link rel="stylesheet" href="~/Content/DataTables/datatables.min.css">
 
     <!--Custom Css-->
     <link rel="stylesheet" href="~/Content/CustomCss/admin.css">
@@ -84,6 +85,8 @@
     <script src="~/Content/AdminLTE-master/bower_components/fastclick/lib/fastclick.js"></script>
     <!-- AdminLTE App -->
     <script src="~/Content/AdminLTE-master/dist/js/adminlte.min.js"></script>
+    <!--Data Table-->
+    <script src="~/Content/DataTables/datatables.min.js"></script>
 
 
 </head>
