--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Livestream/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Livestream/Index.cshtml
@@ -3,30 +3,86 @@
     ViewBag.Title = "Index";
 }
 
-<div class="box">
-    <div class="box-header">
-        <div class="row">
-            <div class="col-sm-9">
-                <h2>Manage Livestream</h2>
+<div class="container">
+    <div class="box">
+        <div class="box-header">
+            <div class="row">
+                <div class="col-sm-10">
+                    <h2>Manage Livestream</h2>
+                </div>
+                <div class="col-sm-2">
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addLivestreamModal" style="margin-top:20px">
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Livestream
+                    </button>
+                </div>
             </div>
-            <div class="col-sm-3">
-                <button class="btn btn-primary" type="button" style="margin-top:20px">
-                <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add New Livestream</button>
+            <div class="modal fade" id="addLivestreamModal" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Add Livestream</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Name:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Enter Livestream's name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Select Session:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                    </div>
+                                    <select class="form-control">
+                                        <option>Sesion 1</option>
+                                        <option>Sesion 2</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Link Stream:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-link" aria-hidden="true"></i>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Input url">
+                                </div>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Add</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="box-body">
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="item-type-table-wrapper" class="dataTables_wrapper form-inline no-foot"></div>
-                <div class="row">
-                    <div class="col-sm-6"></div>
-                    <div class="col-sm-6"></div>
+        <div class="box-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="item-type-table-wrapper" class="dataTables_wrapper form-inline no-foot"></div>
+                    <div class="row">
+                        <div class="col-sm-6"></div>
+                        <div class="col-sm-6">
+
+                        </div>
+                    </div>
+
                 </div>
-                
             </div>
         </div>
     </div>
 </div>
+
 
