--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -386,21 +386,24 @@
                 <ul class="sidebar-menu" data-widget="tree">
                     <li class="header">MAIN NAVIGATION</li>
                     @*<li class="active treeview">
-                        <a href="#">
-                            <i class="icon-home"></i><span>Home</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                            <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-                        </ul>
-                    </li>*@
-                    <li><a><i class="icon-home"></i> <span>Home</span></a></li>
+            <a href="#">
+                <i class="icon-home"></i><span>Home</span>
+                <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                </span>
+            </a>
+            <ul class="treeview-menu">
+                <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+            </ul>
+        </li>*@
+                    <li><a href="@Url.Action("Index","Home")"><i class="icon-home"></i> <span>Home</span></a></li>
                     <li><a><i class="icon-form"></i> <span>Timeline</span></a></li>
                     <li><a><i class="fa fa-question-circle"></i> <span>Q&A</span></a></li>
                     <li><a><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
+                    <li><a href="@Url.Action("Index","Interaction")"><i class="fa fa-check-circle-o"></i> <span>Interaction</span></a></li>
+                    <li><a href="@Url.Action("Index","Activity")"><i class="fa fa-rocket" aria-hidden="true"></i><span>Activity</span></a></li>
+                    <li><a href="@Url.Action("Index","Session")"><i class="fa fa-calendar" aria-hidden="true"></i><span>Session</span></a></li>
                     <li><a href="@Url.Action("Index","Livestream")"><i class="fa fa-video-camera"></i> <span>Livestream</span></a></li>
                     <li><a href="@Url.Action("Index","Speaker")"><i class="fa fa-users"></i> <span>Speaker</span></a></li>
                     <li><a href="@Url.Action("Index","Sponsor")"><i class="fa fa-users"></i> <span>Sponsor</span></a></li>
