--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Sponsor/Index.cshtml
@@ -10,148 +10,153 @@
     var listSponsor = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 3).CollectionItems;
 }
 
-<div class="ibox float-e-margins">
-    <div class="ibox-title">
-        <div class="row">
-            <h2 class="col-sm-10">Sponsor Management</h2>
-            <div class="col-sm-2">
-                <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addSponsorModal" style="margin-top:20px">
-                <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Sponsor</button>
-            </div>
-        </div>
-        <div class="modal fade" id="addSponsorModal" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Add Sponsor</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Name:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-briefcase" aria-hidden="true"></i>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Enter Sponsor's name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Description:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-info" aria-hidden="true"></i>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Enter Description">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-3 form-control-label">Image:</label>
-                            <div class="col-sm-9 input-group">
-                                <div class="input-group-addon">
-                                    <i class="fa fa-link" aria-hidden="true"></i>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Input image url">
-                            </div>
-                            <div class="col-sm-3"></div>
-                            <div class="row col-sm-9">
-                                <label>or</label>
-                                <input type="file" id="myFile">
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" style="margin-top:5px">Add</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    </div>
+<div class="container">
+    <div class="ibox float-e-margins">
+        <div class="ibox-title">
+            <div class="row">
+                <h2 class="col-sm-10">Sponsor Management</h2>
+                <div class="col-sm-2">
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#addSponsorModal" style="margin-top:20px">
+                        <i class="fa fa-plus" style="margin-right:7px" aria-hidden="true"></i>Add Sponsor
+                    </button>
                 </div>
+            </div>
+            <div class="modal fade" id="addSponsorModal" role="dialog">
+                <div class="modal-dialog">
 
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Add Sponsor</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Name:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Enter Sponsor's name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Description:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-info" aria-hidden="true"></i>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Enter Description">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 form-control-label">Image:</label>
+                                <div class="col-sm-9 input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-link" aria-hidden="true"></i>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Input image url">
+                                </div>
+                                <div class="col-sm-3"></div>
+                                <div class="row col-sm-9">
+                                    <label>or</label>
+                                    <input type="file" id="myFile">
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" style="margin-top:5px">Add</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="ibox-content">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="text-center">Sponsor List</div>
-                <div class="sponsonrs-layout1">
-                    <div class="row">
-                        @foreach (var item in listSponsor)
-                        {
-                            <div class="col-md-3 col-sm-6 col-12">
-                                <div class="box-shadow">
-                                    <a href="#" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">
-                                        <img src="@(item.ImageUrl)" alt="brand" class="img-fluid" style="width:260px; height:200px;">
-                                    </a>
-                                </div>
-                            </div>
-                            <!-- Trigger the modal with a button -->
-                            @*<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">Open Modal</button>*@
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="myModal@(item.CollectionItemID)" role="dialog">
-                                <div class="modal-dialog">
-
-                                    <!-- Modal content-->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Edit Sponsor</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>@(item.Name)</p>
-                                            <div class="form-group">
-                                                <label class="col-sm-3 form-control-label">Name:</label>
-                                                <div class="col-sm-9 input-group">
-                                                    <div class="input-group-addon">
-                                                        <i class="fa fa-briefcase" aria-hidden="true"></i>
-                                                    </div>
-                                                    <input type="text" class="form-control" placeholder="Edit Sponsor's name">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-3 form-control-label">Descripstion:</label>
-                                                <div class="col-sm-9 input-group">
-                                                    <div class="input-group-addon">
-                                                        <i class="fa fa-info" aria-hidden="true"></i>
-                                                    </div>
-                                                    <input type="text" class="form-control" placeholder="Edit Description">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="col-sm-3 form-control-label">Image:</label>
-                                                <div class="col-sm-9 input-group">
-                                                    <div class="input-group-addon">
-                                                        <i class="fa fa-link" aria-hidden="true"></i>
-                                                    </div>
-                                                    <input type="text" class="form-control" placeholder="Input image url">
-                                                </div>
-                                                <div class="col-sm-3"></div>
-                                                <div class="row col-sm-9">
-                                                    <label>or</label>
-                                                    <input type="file" id="myFile">
-                                                </div>
-
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="submit" class="btn btn-primary" style="margin-top:5px">Save change</button>
-                                            <button type="submit" class="btn btn-danger">Delete</button>
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-
-                                        </div>
+        <div class="ibox-content">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="text-center">Sponsor List</div>
+                    <div class="sponsonrs-layout1">
+                        <div class="row">
+                            @foreach (var item in listSponsor)
+                            {
+                                <div class="col-md-3 col-sm-6 col-12">
+                                    <div class="box-shadow">
+                                        <a href="#" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">
+                                            <img src="@(item.ImageUrl)" alt="brand" class="img-fluid" style="width:260px; height:200px;">
+                                        </a>
                                     </div>
-
                                 </div>
-                            </div>
-                        }
+                                <!-- Trigger the modal with a button -->
+                                @*<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal@(item.CollectionItemID)">Open Modal</button>*@
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="myModal@(item.CollectionItemID)" role="dialog">
+                                    <div class="modal-dialog">
+
+                                        <!-- Modal content-->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">Edit Sponsor</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>@(item.Name)</p>
+                                                <div class="form-group">
+                                                    <label class="col-sm-3 form-control-label">Name:</label>
+                                                    <div class="col-sm-9 input-group">
+                                                        <div class="input-group-addon">
+                                                            <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                                        </div>
+                                                        <input type="text" class="form-control" placeholder="Edit Sponsor's name">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="col-sm-3 form-control-label">Descripstion:</label>
+                                                    <div class="col-sm-9 input-group">
+                                                        <div class="input-group-addon">
+                                                            <i class="fa fa-info" aria-hidden="true"></i>
+                                                        </div>
+                                                        <input type="text" class="form-control" placeholder="Edit Description">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="col-sm-3 form-control-label">Image:</label>
+                                                    <div class="col-sm-9 input-group">
+                                                        <div class="input-group-addon">
+                                                            <i class="fa fa-link" aria-hidden="true"></i>
+                                                        </div>
+                                                        <input type="text" class="form-control" placeholder="Input image url">
+                                                    </div>
+                                                    <div class="col-sm-3"></div>
+                                                    <div class="row col-sm-9">
+                                                        <label>or</label>
+                                                        <input type="file" id="myFile">
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-primary" style="margin-top:5px">Save change</button>
+                                                <button type="submit" class="btn btn-danger">Delete</button>
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 
