--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Speaker/Index.cshtml
@@ -11,46 +11,49 @@
 }
 <div class="row">
     @{
-        int i = 0;
         foreach (var item in listSpeaker)
         {
-            <div class="col-md-4 col-sm-8 col-12">
+            <div class="col-md-4 col-sm-8 col-12" onclick="showModalSpeaker('@(item.Name)', '@(item.Description)')">
                 <div class="box-speaker-shadow">
-                        <a href="" id="speaker-modal" data-toggle="modal" data-target="#speakerModal@(i)">
-                    <img class="img-fluid image-speaker-custom" src="@(item.ImageUrl)" alt="brand">
-                        </a>
+                    <a href="" data-toggle="modal" data-target="#speakerModal">
+                        <img class="img-fluid image-speaker-custom" src="@(item.ImageUrl)" alt="brand">
+                    </a>
                     <div class="item-title">
                         <h3 class="title title-medium" style="text-align:center">
-                            <a>@(item.Name)</a>
+                            <a class="speaker-name">@(item.Name)</a>
                         </h3>
                     </div>
                 </div>
             </div>
-            <div id="speakerModal@(i)" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">@(item.Name)</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <p>@(item.Description)</p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            i++;
         }
     }
 
 </div>
 
-<script>
-    function clickModal(name, description, imageUrl) {
+<div id="speakerModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
 
-    }
-</script>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title speaker-title">a</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p class="speaker-description"></p>
+            </div>
+            <div class="modal-footer">
+                <button  type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts {
+    <script>
+        function showModalSpeaker(name, description) {
+            $('.speaker-title').html(name);
+            $('.speaker-description').html(description);
+        }
+
+    </script>
+}
