--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-                /**/
+    /**/
 
-                ViewBag.Title = "Home Page";
-                var listBannerImage = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 1).CollectionItems;
+    ViewBag.Title = "Home Page";
+    var listBannerImage = Model.EventCollections.FirstOrDefault(e => e.EventCollectionID == 1).CollectionItems;
 }
 @using HmsService.Models.Entities;
 @model Event
@@ -12,7 +12,7 @@
         <div class="col-sm-8 name-title" style="text-align:center"><h1>Diễn đàn doanh nghiệp Hàng VN chất lượng cao và khởi nghiệp</h1></div>
         <div class="col-sm-4">
             <div class="row down pull-left">
-                <a class="btn btn-primary" href="@Url.Action("Edit", "Home")">
+                <a class="btn btn-primary" href="@Url.Action("Edit", "Home", new { id = Model.EventID})">
                     <i class="fa fa-pencil btn-css" aria-hidden="true"></i>
                     <span>Edit</span>
                 </a>
