--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -8,7 +8,6 @@
 
 <div class="container">
     <div class="box">
-        </div>
         <div class="box-header">
             <h2 class="col-sm-10">Manage Session</h2>
             <a class="col-sm-2 btn btn-primary" href="@Url.Action("Edit","Session")" style="margin-top:20px">
@@ -53,5 +52,48 @@
 
         </div>
     </div>
+    <table class="table table-hover table-bordered" id="tblSession">
+        <thead>
+            <tr>
+                <th>Session Name</th>
+                <th>Start Time</th>
+                <th>End Time</th>
+            </tr>
+        </thead>
+    </table>
 </div>
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            $('#tblSession').DataTable({
+                ajax: {
+                    url: "api/session/getAllSession",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        name: "name",
+                        render: function (data, type, row) {
+                            console.log(row);
+                            return "<a href='customer/edit/'" + row.name + ">" + row.name + "</a>";
+                        }
+                    },
+                    {
+                        name: "startTime",
+                        render: function (data, type, row) {
+                            return row.startTime;
+                        }
+                    },
+                    {
+                        name: "endTime",
+                        render: function (data, type, row) {
+                            return row.endTime;
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
+}
 
