--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/QA/Index.cshtml
@@ -40,8 +40,8 @@
                         <span id="username-reply">@(subItem.Username): </span>
                         <span id="reply-content">@(subItem.CommentContent)</span>
                         <p class="like-rep">
-                            <button class="btn btn-primary btn-sm btn-like-reply" value="@(subItem.CommentId)"><i class="fa fa-thumbs-o-up" aria-hidden="true"> @(subItem.NumberOfLike)</i></button>
-                            <button value="@(item.QuestionId)" id="btn-reply" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
+                            <button id="btn-like-reply-@(subItem.CommentId)" class="btn btn-primary btn-sm btn-like-reply" value="@(subItem.CommentId)"><i class="fa fa-thumbs-o-up" aria-hidden="true"> @(subItem.NumberOfLike)</i></button>
+                            <button value="@(item.QuestionId)" id="btn-reply-@(subItem.CommentId)" class="btn btn-success btn-sm btn-reply" data-toggle="modal" data-target="#modalReply"><i class="fa fa-reply" aria-hidden="true"></i> Reply</button>
                         </p>
                         @{
                             var createTimeTmp = (DateTime)subItem.CreateTime;
@@ -199,9 +199,8 @@
                 $('#btnSendReply').click(function () {
                     var usernameRep = $('#txtUsernameReply').val();
                     var contentReply = $('#txtContentReply').val();
-                    console.log($('#questionId').val());
                     var questionId = $('#questionId').val();
-                    chat.server.sendReply(usernameRep, contentReply, questionId);
+                    
                     
                     $.ajax({
                         url: "api/Comments",
@@ -213,9 +212,10 @@
                             QuestionId: questionId
 
                         },
-                        success: function () {
+                        success: function (data) {
                             $('#txtUsernameReply').val("");
                             $('#txtContentReply').val("");
+                            chat.server.sendReply(usernameRep, contentReply, questionId, data.commentId);
                         },
                         error: function (data) {
                             console.log(data);
@@ -223,12 +223,8 @@
                     });
                 });
 
-
-
-
-
                 //click like question
-                $('.btn-like-question').click(function () {
+                $(document).on('click', '.btn-like-question', function () {
                     var questionId = $(this).attr('value');
                     var urlApi = 'api/question/LikeQuestion';
                     var isLike = localStorage.getItem("" + questionId);
@@ -265,6 +261,49 @@
                         }
                     });
                 });
+
+                //Click like reply
+                $(document).on('click', '.btn-like-reply', function () {
+                    var commentId = $(this).attr('value');
+                    var urlApi = 'api/comment/LikeComment';
+                    var isLikedComment = localStorage.getItem("CommentID" + commentId);
+                    if (isLikedComment == null) {
+                        localStorage.setItem("CommentID" + commentId, "true");
+                    }
+                    else {
+                        if (isLikedComment == "true") {
+                            localStorage.setItem("CommentID" + commentId, "false");
+                            urlApi = 'api/comment/DisLikeComment';
+                        }
+                        else {
+                            localStorage.setItem("CommentID" + commentId, "true");
+                        }
+                    }
+
+                    isLikedComment = localStorage.getItem("CommentID" + commentId) == "true";
+                    if (isLikedComment == true) {
+                        chat.server.likeComment(commentId, parseInt($(this).text()) + 1);
+                    }
+                    else {
+                        chat.server.likeComment(commentId, parseInt($(this).text()) - 1);
+                    }
+                    $.ajax({
+                        url: urlApi,
+                        method: "POST",
+                        data: {
+                            CommentId: commentId
+                        },
+                        success: function (data) {
+
+                        },
+                        error: function (data) {
+                            console.log(data);
+                        }
+                    });
+
+                });
+
+
             });
 
             // Create a function that the hub can call back to display messages.
@@ -275,8 +314,10 @@
                     listQa.find('.username-content').html(name + ": " + message);
                     listQa.find('.create-time').html(new Date().toLocaleString("en-GB"));
                     listQa.find('.number-of-like').html('0');
-                    listQa.find('.btn-reply').attr('value',newQuestionId);
+                    listQa.find('.btn-reply').attr('value', newQuestionId);
+                    listQa.find('.btn-like-question').attr('value', newQuestionId);
                     listQa.find('.list-qa').attr('id', 'list-qa-' + newQuestionId);
+                    listQa.find('.btn-like-question').attr('id', 'btn-like-question-' + newQuestionId);
                     $('#qa-container').append(listQa.html());
                 }
 
@@ -284,18 +325,27 @@
             };
 
             //Create a function that the hub call back to display reply
-
-            chat.client.addNewReplyToPage = function (name, message, questionId) {
+            chat.client.addNewReplyToPage = function (name, message, questionId, commentId) {
                 // Add the message to the page.
                 if (message.length != 0) {
                     var listReply = $('#list-reply-template').clone();
                     listReply.find('#username-reply').html(name + ": ");
                     listReply.find('#reply-content').html(message);
                     listReply.find('#reply-time').html(new Date().toLocaleString("en-GB"));
+                    listReply.find('.btn-like-reply').attr('id', 'btn-like-reply-' + commentId);
+                    listReply.find('.btn-like-reply').attr('value', commentId);
                     var listQaContainer = '#list-qa-' + questionId;
                     $(listQaContainer).append(listReply.html());
                 }
 
+
+            };
+
+            //Create a function that hub call back to update new like of comment
+            chat.client.updateNewLikeOfComment = function (commentId, newNumberOfLike) {
+                var str = '<i class="fa fa-thumbs-o-up" aria-hidden="true"></i> ' + newNumberOfLike;
+                $('#btn-like-reply-' + commentId).empty();
+                $('#btn-like-reply-' + commentId).append(str);
 
             };
 
@@ -305,6 +355,8 @@
                 $('#btn-like-question-' + questionId).empty();
                 $('#btn-like-question-' + questionId).append(str);
             };
+
+            
 
 
             $(document).on('click', '.btn-reply', function () {
