tạo trang timeline với nút add pop-up

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Content/CustomCss/admin.css
@@ -25,3 +25,12 @@
 .modal-dialog{
     left:unset !important;
 }
+
+
+.tableHeadText {
+    padding-left: 15px;
+    
+    font-size: medium;
+    color: gray;
+    font-weight: 600;
+}
