--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Interaction/Index.cshtml
@@ -90,7 +90,23 @@
         </div>
 
         <div class="ibox-content">
+            <div class="nav-tabs">
+                <div class="tab-content">
+                    <div id="activity-tab">
+                        <div class="col-sm-6">
+                            <div class="col-sm-12">
+                                <div class="tableHeadText">Unavailable</div>
+                            </div>
+                        </div>
 
+                        <div class="col-sm-6">
+                            <div class="col-sm-12">
+                                <div class="tableHeadText">Running</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
