--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -398,7 +398,7 @@
             </ul>
         </li>*@
                     <li><a href="@Url.Action("Index","Home")"><i class="icon-home"></i> <span>Home</span></a></li>
-                    <li><a><i class="icon-form"></i> <span>Timeline</span></a></li>
+                    <li><a href="@Url.Action("Index","Timeline")"><i class="icon-form"></i> <span>Timeline</span></a></li>
                     <li><a><i class="fa fa-question-circle"></i> <span>Q&A</span></a></li>
                     <li><a><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
                     <li><a href="@Url.Action("Index","Interaction")"><i class="fa fa-check-circle-o"></i> <span>Interaction</span></a></li>
