Sửa lại không render link ở datatable (trang session admin)

--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -76,7 +76,7 @@
                         name: "name",
                         render: function (data, type, row) {
                             console.log(row);
-                            return "<a href='customer/edit/'" + row.name + ">" + row.name + "</a>";
+                            return row.name;
                         }
                     },
                     {
